--- a/Day-4/index.css
+++ b/Day-4/index.css
@@ -37,7 +37,7 @@
 
 .res-card{
     width: 200px;
-    height: 420px;
+    height: 350px;
     background-color: #f0f0f0;
     padding: 5px;
     margin: 15px;
@@ -50,6 +50,6 @@
 }
 
 .res-logo{
-    
+    height: 38%;
     width: 100%;
 }
